--- a/index.html
+++ b/index.html
@@ -61,8 +61,23 @@
     </div>
   </div>
   
-
-
+  
+  <div class="rules">
+	<button class="rule-button" onclick="showRules()">Rules</button>
+  </div>
+  
+  <div class="modal hide">
+	<div class="modal-header">
+	  <div>Rules</div>
+      <button onclick="closeModal()" title="Close">X</button>
+	</div>
+	<div class="modal-content">
+	  <img src="images/image-rules.svg" alt="rules" width="250" />
+	</div>
+  </div>
+  
+  <div class="modal-backdrop hide" onclick="closeModal()"></div>
+  
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Anikendra</a>.
@@ -178,6 +193,40 @@ function playAgain() {
   
   document.body.style.backgroundColor = "#192648";
 }
+
+var modal = document.querySelector(".modal");
+var modalBackdrop = document.querySelector(".modal-backdrop");
+var isModalOpen = false;
+
+function showRules() {
+  
+  modal.classList.remove("hide");
+  modalBackdrop.classList.remove("hide");
+  
+  modal.classList.add("show");
+  modalBackdrop.classList.add("show");
+  
+  isModalOpen = true;
+}
+
+function closeModal() {
+  modal.classList.add("hide");
+  modalBackdrop.classList.add("hide");
+  
+  modal.classList.remove("show");
+  modalBackdrop.classList.remove("show");
+  
+  isModalOpen = false;
+}
+
+document.addEventListener("keyup", (ev) => {
+  console.log(ev);
+  if(ev.key == "Escape") {
+    if(isModalOpen) {
+	  closeModal();
+	}
+  }
+});
 </script>
 
 </html>
