Fixed icons positions

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <div class="options">
+  <!--<div class="options">
     <img src="images/bg-triangle.svg" alt="triangle" class="triangle">
     <div class="round-circle blue" onclick="choose(0)">
       <img src="images/icon-paper.svg" alt="paper">
@@ -38,6 +38,23 @@
     </div>
     <div class="round-circle red" onclick="choose(2)">
       <img src="images/icon-rock.svg" alt="rock">
+    </div>
+  </div>-->
+  
+  <div class="options">
+    <div class="upper">
+    <div class="round-circle blue" onclick="choose(0)">
+      <img src="images/icon-paper.svg" alt="paper">
+    </div>
+    <div class="round-circle yellow" onclick="choose(1)">
+      <img src="images/icon-scissors.svg" alt="scissors">
+    </div>
+    </div>
+	
+	<div class="lower">
+    <div class="round-circle red" onclick="choose(2)">
+      <img src="images/icon-rock.svg" alt="rock">
+    </div>
     </div>
   </div>
   
